--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.less
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.less
@@ -7,9 +7,14 @@
 .body-content {
     font-size: 14px;
 
+    button {
+        cursor: pointer;
+    }
 
     .search-form {
         background: @darkBlue;
+        padding: 8px 16px;
+        margin: 0;
 
         .row {
             margin: 0;
@@ -18,6 +23,7 @@
         .field, button {
             margin: 8px 10px;
             border-radius: 8px;
+            outline: none;
         }
 
         .field {
@@ -50,16 +56,25 @@
 
     .results-header {
         background: @grey;
+        padding: 4px 16px;
+        margin: 0;
 
         .save {
             background: url(../images1/combined-shape.png) no-repeat;
-            background-position: 0 50%;
+            background-position: 10px 50%;
             background-size: 24px;
-            padding-left: 40px;
+            padding: 4px 10px 4px 50px;
             border: none;
             color: @lightBlue;
             font-size: 20px;
             font-weight: bold;
+            outline: none;
+            border-radius: 4px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #d8d8d8;
+            }
         }
 
         .results-nav {
@@ -79,6 +94,10 @@
                 height: 0;
                 background: none;
                 border-style: solid;
+
+                &:disabled {
+                    cursor: default;
+                }
 
                 &[name="next_btn"] {
                     border-width: 12px 0 12px 24px;
@@ -100,11 +119,6 @@
                 }
             }
         }
-    }
-
-    .search-form, .results-header {
-        padding: 8px 16px;
-        margin: 0;
     }
 
     .messages {
@@ -153,6 +167,7 @@
                     margin: 10px 0;
                     border-radius: 8px;
                     padding: 0 10px;
+                    outline: none;
                 }
 
                 &.tags {
@@ -183,7 +198,6 @@
                         margin-bottom: 5px;
 
                         .delete-tag {
-                            cursor: pointer;
                             position: absolute;
                             right: -20px;
                             top: 0;
@@ -222,6 +236,17 @@
                         outline: none;
                     }
                 }
+            }
+
+            .delete-doc {
+                color: #ff0000;
+                font-weight: bold;
+                position: absolute;
+                top: 16px;
+                right: 0;
+                background: none;
+                border: none;
+                outline: none;
             }
         }
 
