--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.css
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.css
@@ -4,6 +4,26 @@
 .body-content button {
   cursor: pointer;
 }
+.body-content .loader-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+.body-content .loader-wrapper .loader {
+  border: 16px solid #b3b2b2;
+  border-top: 16px solid #3293f6;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
 .body-content .search-form {
   background: #003b78;
   padding: 8px 16px;
@@ -110,7 +130,7 @@
   right: 0;
   background: #3293f6;
   height: 50px;
-  z-index: 999;
+  z-index: 1;
   font-size: 22px;
   line-height: 50px;
   color: white;
@@ -214,4 +234,28 @@
 }
 .body-content .result-data .preview .preview-image img {
   max-width: 100%;
+}
+@-moz-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
