--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.less
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.less
@@ -11,6 +11,29 @@
         cursor: pointer;
     }
 
+    .loader-wrapper {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: rgba(0,0,0,0.4);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+
+        .loader {
+            border: 16px solid #b3b2b2;
+            border-top: 16px solid @lightBlue;
+            border-radius: 50%;
+            width: 120px;
+            height: 120px;
+            animation: spin 2s linear infinite;
+        }
+    }
+
+
     .search-form {
         background: @darkBlue;
         padding: 8px 16px;
@@ -137,7 +160,7 @@
             right: 0;
             background: @lightBlue;
             height: 50px;
-            z-index: 999;
+            z-index: 1;
             font-size: 22px;
             line-height: 50px;
             color: white;
@@ -263,5 +286,35 @@
                 }
             }
         }
+    }
+}
+
+@-moz-keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
