--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.less
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.less
@@ -117,6 +117,7 @@
                 height: 0;
                 background: none;
                 border-style: solid;
+                outline: none;
 
                 &:disabled {
                     cursor: default;
@@ -153,7 +154,7 @@
             text-align: center;
         }
 
-        .saved {
+        .status {
             position: absolute;
             top: 0;
             left: 0;
@@ -182,6 +183,10 @@
 
                 &:not(:last-child) {
                     border-bottom: 3px solid black;
+                }
+
+                &.general-info{
+                    position: relative;
                 }
 
                 &.doc-type select {
