--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.less
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.less
@@ -4,6 +4,10 @@
 
 @headerHeight: 186px;
 
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 .body-content {
     font-size: 14px;
 
@@ -68,7 +72,7 @@
                 display: flex;
                 align-items: center;
                 font-size: 12px;
-                max-width: 150px;
+                max-width: 160px;
 
                 span {
                     margin-left: 10px;
