--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>index</title>
 </head>
-<body>
+<body ng-cloak>
     <form class="search-form" name="searchTrigger" novalidate>
         <div class="row">
             <input class="field col" list="university" name="university" placeholder="University" ng-model-options="{ debounce: 500 }" ng-model="st.formData.university" ng-change="st.autocomplete('university')">
@@ -31,12 +31,12 @@
             <label class="col">
                 <input type="checkbox"
                        name="isReviewed" ng-model="st.formData.isReviewed">
-                <span>Was Reviewd</span>
+                <span>Was reviewd</span>
             </label>
             <label class="col">
                 <input type="checkbox" ng-checked="st.formData.isSearchType" ng-model="st.formData.isSearchType"
                        name="isSearchType">
-                <span>No search Type</span>
+                <span>No document type</span>
             </label>
         </div>
     </form>
