add undefined type option for tagging item doctype

--- a/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Home/page.cshtml
@@ -78,6 +78,7 @@
                 <h1>Document Type</h1>
                 <select id="mySelect" ng-model="st.doc.TypeId" >
                     <option value="" disabled selected>Search type</option>
+                    <option value="0">Undefined</option>
                     <option value="8">Exam</option>
                      <option value="7">Study Guide</option>
                     <option value="9">Class Notes</option>
