--- a/Zbang.Cloudents.Mvc2Jared/Views/Shared/_Layout.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title  This is Jared</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body ng-app>
@@ -34,7 +34,7 @@
         </footer>
     </div>
     <script src="~/Scripts/angular/angular.min.js"></script>
-    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/Scripts/jquery-2.2.4.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Js/login.js"></script>
 </body>
