--- a/Zbang.Cloudents.Mvc2Jared/Views/Account/index.cshtml
+++ b/Zbang.Cloudents.Mvc2Jared/Views/Account/index.cshtml
@@ -14,10 +14,10 @@
     <div class="forms">
         <form class="login" action="" method="post">
             <div class="form-group">
-                <input class="form-control" required type="email" placeholder="email" name="email" value="yifatbij@gmail.com" />
+                <input class="form-control" required type="email" placeholder="email" name="email"/>
             </div>
             <div class="form-group">
-                <input class="form-control" required type="password" placeholder="password" name="password" value="123123"/>
+                <input class="form-control" required type="password" placeholder="password" name="password"/>
             </div>
             <div id="login_alert_text" class="alert alert-danger">
                 <span></span>
