--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Items.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Items.cshtml
@@ -33,7 +33,7 @@
                     </md-button>
                 </md-menu-item>
                 <md-menu-item ng-if="::stateParams.tabId">
-                    <md-button ng-click="i.removeItemFromTab(e)" ga-track-event="['box-tabs', 'didDelete']">
+                    <md-button ng-click="i.removeItemFromTab(e)" ga-track-event="['box-tab', 'element-removed-from-tab']">
                         @BoxResources.ItemRemoveFolder
                     </md-button>
                 </md-menu-item>
