--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Tabs.cshtml
@@ -13,7 +13,7 @@
                     </form>
                 </div>
                 <md-menu ng-if="!b.needFollow">
-                    <md-button aria-label="open menu" class="md-icon-button" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['box-tabs', 'deleteTab']">
+                    <md-button aria-label="open menu" class="md-icon-button" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['box-tab', 'open-tab-menu']">
                         <md-icon md-svg-icon="t:ThreeDots" class="dots-3"></md-icon>
                     </md-button>
                     <md-menu-content width="1">
@@ -23,7 +23,7 @@
                             </md-button>
                         </md-menu-item>
                         <md-menu-item>
-                            <md-button ng-click="t.deleteTab($event)" ga-track-event="['box-tabs', 'didDelete']">
+                            <md-button ng-click="t.deleteTab($event)" ga-track-event="['box-tab', 'delete']">
                                 @GeneralResources.Delete
                             </md-button>
                         </md-menu-item>
@@ -47,7 +47,7 @@
             </div>
         </li>
         <li flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50" class="add-folder folder-name fade-in-repeat i-q-wrapper">
-            <button type="button" ga-track-event="['box-Tabs', 'addFolder']" class="content" ng-if="!t.newFolderTabOpened" user-not-register-popup="click" ng-click="t.newFolderTabOpened = true">
+            <button type="button" ga-track-event="['box-tab', 'add-tab']" class="content" ng-if="!t.newFolderTabOpened" user-not-register-popup="click" ng-click="t.newFolderTabOpened = true">
                 <md-icon md-svg-icon="t:add"></md-icon>
                 <span>
                     @BoxResources.AddFolder
