--- a/Zbang.Cloudents.Mvc2Jared/Content/Site.less
+++ b/Zbang.Cloudents.Mvc2Jared/Content/Site.less
@@ -289,7 +289,10 @@
             .preview-image {
                 width: 100%;
                 text-align: center;
-
+                .iframeContent {
+                    width: 100%;
+                    height: 100vh;
+                } 
                 img {
                     max-width: 100%;
                 }
